# MissionControl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATAFLOWS.md  Makefile  README.md  SPEC.md  TODO.md  V4-IMPLEMENTATION.md
.github/workflows/: ci.yml
cmd/mc/: gate.go  go.mod  handoff.go  init.go  kill.go  main.go  mc_test.go  phase.go  prompts.go  spawn.go  status.go  task.go  workers.go
core/: Cargo.toml  README.md
core/mc-core/: Cargo.toml
core/mc-core/src/: main.rs
core/mc-protocol/: Cargo.toml
core/mc-protocol/src/: conversation.rs  lib.rs  main.rs  protocol.rs  tokens.rs  watcher.rs
homebrew/: mission-control.rb
orchestrator/: go.mod  main.go
orchestrator/api/: projects.go  routes.go  routes_test.go  v5.go
orchestrator/bridge/: config.go  file_protocol.go  king.go  king_test.go
orchestrator/manager/: manager.go
orchestrator/terminal/: pty_handler.go
orchestrator/watcher/: watcher.go
orchestrator/ws/: hub.go
stream-parser/: Cargo.toml
stream-parser/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/e2e/: agents.spec.ts  king-mode.spec.ts  project-wizard.spec.ts  websocket.spec.ts  zones.spec.ts
web/src/: App.tsx  index.css
web/src/components/: AgentDashboard.tsx  AgentTerminal.tsx  FindingsViewer.tsx  FolderPicker.tsx  Header.tsx  KingPanel.tsx  ProjectWizard.test.tsx  ProjectWizard.tsx  SettingsPanel.tsx  Sidebar.test.tsx  Sidebar.tsx  SpawnDialog.tsx  WorkersPanel.tsx  WorkflowMatrix.test.tsx  WorkflowMatrix.tsx
web/src/hooks/: useWebSocket.ts
(+10 files in other folders)
