[package]
name = "mc-core"
version = "0.1.0"
edition = "2021"
description = "MissionControl core CLI - validation, gate checking, token counting"

[[bin]]
name = "mc-core"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
knowledge = { path = "../knowledge" }
workflow = { path = "../workflow" }

[dev-dependencies]
tempfile = "3.10"
