[package]
name = "mc-protocol"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mc-protocol"
path = "src/main.rs"

[dependencies]
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
knowledge = { path = "../knowledge" }

[dev-dependencies]
tempfile = "3.10"
